Fundo fixo de tela

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,12 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posicionamento</title>
+    <title>Fundo fixo de tela</title>
     <style>
-        
+        body {
+            background-color: black;
+            background-image: url('imagens/wallpaper002.jpg');
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover; /* vai fazer cortes, mas vai preencher a tela inteira */
+            background-attachment: fixed; /* para a imagem ficar fixada */
+
+            /* Você pode usar o shorthand de todos esses "backgrounds", vai ser na ordem: color > image > position > [size] > attachment */
+        }
+
+        main {
+            background-color: white;
+            max-width: 700px;
+            padding: 10px;
+            margin: auto;
+            border: 1px solid darkblue;
+            border-radius: 15px;
+        }
+
     </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis itaque enim cupiditate ea, nisi mollitia veritatis qui! Modi quam natus, deleniti aperiam laboriosam fugit, porro dolore cumque vitae harum vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit molestiae sint vero et earum similique, provident eaque tenetur quasi perspiciatis cum consequuntur reiciendis voluptas, illum unde officiis suscipit ipsum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis eum minima porro commodi quod dolor qui debitis, consequatur ut vel consectetur quibusdam officia officiis quia explicabo, amet culpa veniam ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis itaque enim cupiditate ea, nisi mollitia veritatis qui! Modi quam natus, deleniti aperiam laboriosam fugit, porro dolore cumque vitae harum vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit molestiae sint vero et earum similique, provident eaque tenetur quasi perspiciatis cum consequuntur reiciendis voluptas, illum unde officiis suscipit ipsum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis eum minima porro commodi quod dolor qui debitis, consequatur ut vel consectetur quibusdam officia officiis quia explicabo, amet culpa veniam ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis itaque enim cupiditate ea, nisi mollitia veritatis qui! Modi quam natus, deleniti aperiam laboriosam fugit, porro dolore cumque vitae harum vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit molestiae sint vero et earum similique, provident eaque tenetur quasi perspiciatis cum consequuntur reiciendis voluptas, illum unde officiis suscipit ipsum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis eum minima porro commodi quod dolor qui debitis, consequatur ut vel consectetur quibusdam officia officiis quia explicabo, amet culpa veniam ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis itaque enim cupiditate ea, nisi mollitia veritatis qui! Modi quam natus, deleniti aperiam laboriosam fugit, porro dolore cumque vitae harum vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit molestiae sint vero et earum similique, provident eaque tenetur quasi perspiciatis cum consequuntur reiciendis voluptas, illum unde officiis suscipit ipsum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis eum minima porro commodi quod dolor qui debitis, consequatur ut vel consectetur quibusdam officia officiis quia explicabo, amet culpa veniam ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis itaque enim cupiditate ea, nisi mollitia veritatis qui! Modi quam natus, deleniti aperiam laboriosam fugit, porro dolore cumque vitae harum vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit molestiae sint vero et earum similique, provident eaque tenetur quasi perspiciatis cum consequuntur reiciendis voluptas, illum unde officiis suscipit ipsum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis eum minima porro commodi quod dolor qui debitis, consequatur ut vel consectetur quibusdam officia officiis quia explicabo, amet culpa veniam ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis itaque enim cupiditate ea, nisi mollitia veritatis qui! Modi quam natus, deleniti aperiam laboriosam fugit, porro dolore cumque vitae harum vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit molestiae sint vero et earum similique, provident eaque tenetur quasi perspiciatis cum consequuntur reiciendis voluptas, illum unde officiis suscipit ipsum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis eum minima porro commodi quod dolor qui debitis, consequatur ut vel consectetur quibusdam officia officiis quia explicabo, amet culpa veniam ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis itaque enim cupiditate ea, nisi mollitia veritatis qui! Modi quam natus, deleniti aperiam laboriosam fugit, porro dolore cumque vitae harum vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit molestiae sint vero et earum similique, provident eaque tenetur quasi perspiciatis cum consequuntur reiciendis voluptas, illum unde officiis suscipit ipsum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis eum minima porro commodi quod dolor qui debitis, consequatur ut vel consectetur quibusdam officia officiis quia explicabo, amet culpa veniam ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis itaque enim cupiditate ea, nisi mollitia veritatis qui! Modi quam natus, deleniti aperiam laboriosam fugit, porro dolore cumque vitae harum vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit molestiae sint vero et earum similique, provident eaque tenetur quasi perspiciatis cum consequuntur reiciendis voluptas, illum unde officiis suscipit ipsum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis eum minima porro commodi quod dolor qui debitis, consequatur ut vel consectetur quibusdam officia officiis quia explicabo, amet culpa veniam ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis itaque enim cupiditate ea, nisi mollitia veritatis qui! Modi quam natus, deleniti aperiam laboriosam fugit, porro dolore cumque vitae harum vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore reprehenderit molestiae sint vero et earum similique, provident eaque tenetur quasi perspiciatis cum consequuntur reiciendis voluptas, illum unde officiis suscipit ipsum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis eum minima porro commodi quod dolor qui debitis, consequatur ut vel consectetur quibusdam officia officiis quia explicabo, amet culpa veniam ipsum.</p>
+    </main>
 </body>
 </html>
