Mais Exercícios iframe

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -19,7 +19,7 @@
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum error vero, aut illo nulla, dolores ipsa facere soluta veniam est possimus rem cumque eum velit minus eveniet praesentium sapiente reprehenderit.</p>
 
-    <iframe src="pagina001.html" frameborder="0"></iframe>
+    <iframe src="paginas-extras/pagina001.html" frameborder="0"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quam eaque rem cumque voluptate quis? In, accusamus, aperiam fugiat minima placeat illum, dolorum alias at facilis qui natus hic adipisci?</p>
 
