Exercícios de iframe - Adicionando Conteúdos

--- a/exercicios/ex024/iframe004.html
+++ b/exercicios/ex024/iframe004.html
@@ -30,7 +30,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores exercitationem vel libero aliquam ex quaerat labore, blanditiis deserunt. Cumque beatae amet a fugit illum commodi reprehenderit voluptatem perspiciatis quasi voluptas. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias voluptas quod enim nam sapiente. Repellendus, molestias ratione nobis iusto odit voluptatum, quos sit quibusdam quod, asperiores culpa labore expedita deserunt.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1> Escolha uma das opções acima</h1> <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, voluptates porro molestiae, ea accusamus culpa ad fuga mollitia sint at suscipit similique excepturi ab. Inventore minus animi deleniti modi perferendis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea fugiat, dolorum ullam, praesentium eos, recusandae repellendus quae asperiores sed alias sequi modi saepe dolore mollitia harum ipsa porro possimus tempora!</p><img src='imagens/jpeg teste.jfif'>">
         <p>Infelizmente o seu navegador não é compatível com isso.</p>
     </iframe>
 
