--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -17,9 +17,9 @@
 <body>
     <h1>Meu primeiro formulário.</h1>
 
-    <form>
-        <p>Nome: <input type="text" name="Nome" id="noem"></p>
-        <p>Sobrenome: <input type="text" name="sobrenome" id="sobrenome"></p>
+    <form action="cadastro.php" autocomplete="off">
+        <p><label for="inome">Nome:</label> <input type="text" name="Nome" id="inome"></p>
+        <p><label for="isobrenome">Sobrenome</label>: <input type="text" name="isobrenome" id="sobrenome"></p>
         <p><input type="submit" value="Enviar"></p>
     </form>
 
