Direções e Eixos Flexbox

--- a/exercicios/ex027/flex001/index.html
+++ b/exercicios/ex027/flex001/index.html
@@ -31,5 +31,25 @@
         <div class="item">G</div>
     </div>
     
+
+     <!-- 
+    A configuração padrão é Flex-Direction: Row (é "deitado" da esquerda para a dereita)
+    Flex-Direction: Row-Reverse (modo reverso, da direita para a esquerda)
+    Flex-Direction: Column (o fluxo normal é de cima para baixo)
+    Flex-Direction: Column-Reverse (os itens vão ser empilhados debaixo para cima)
+
+    Existem 2 eixos:
+    - O eixo Principal que é o Main-Axis (gera dois pontos, o ponto inicial que é chamado de "main-start" e o ponto final que é chamado de "main-end").
+    - Cross-Axis, que também gera 2 pontos (Cross-Start e o Cross-End)
+
+
+    Resumo:
+    - Flex-Direction: Row, o "Main-Axis" vai da esquerda para a direita e o "Cross-Axis" vai de cima para baixo;
+    - Flew-Direction: Row-Reverse, o "Mais-Axis" vai da direita para a esquerda e o "Cross-Axis" não muda, continua de cima para baixo;
+
+    - Flex-Direction: Column, o "Main-Axis" vai de cima para baixo e o "Cross-Axis" vai da esquerda para a direita;
+    - Flex-Direction: Column-Reverse, o "Main-Axis" vai de baixo para cima, e o "Cross-Axis" não muda, continua da esquerda para a direita.
+    -->
+
 </body>
 </html>
